--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,38 @@
 <!doctype html>
-<html lang="en">
-    <head>
+<html lang="ru">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Design</title>
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/style.min.css">
+    <title>To-DO list</title>
+</head>
+<body>
+<section class="main">
+    <div class="container">
+        <h1>To-Do List</h1>
 
+        <form id="form">
+            <label for="task-title">
+                <input type="text" id="task-title" placeholder="Введите заголовок задачи" required>
+            </label>
+            <label for="task-description">
+                <textarea id="task-description" placeholder="Введите описание задачи"></textarea>
+            </label>
+            <button type="submit">Добавить задачу</button>
+        </form>
 
-    <script src="js/script.js"></script>
-    </body>
+        <div class="main__filter">
+            <button id="filter-all" class="main__active">Все</button>
+            <button id="filter-active">Активные</button>
+            <button id="filter-completed">Выполненные</button>
+        </div>
+
+        <ul id="task-list"></ul>
+    </div>
+</section>
+
+<script src="js/script.js"></script>
+</body>
 </html>
